@@ -112,6 +112,10 @@ func (b *Button) SetBlurFunc(handler func(key tcell.Key)) {
 
 // Draw draws this primitive onto the screen.
 func (b *Button) Draw(screen tcell.Screen) {
+	if !b.GetVisible() {
+		return
+	}
+
 	b.Lock()
 	defer b.Unlock()
 
