@@ -155,6 +155,10 @@ func (f *Flex) ResizeItem(p Primitive, fixedSize, proportion int) {
 
 // Draw draws this primitive onto the screen.
 func (f *Flex) Draw(screen tcell.Screen) {
+	if !f.GetVisible() {
+		return
+	}
+
 	f.Box.Draw(screen)
 
 	f.Lock()
