@@ -537,6 +537,10 @@ func (i *InputField) SetFinishedFunc(handler func(key tcell.Key)) {
 
 // Draw draws this primitive onto the screen.
 func (i *InputField) Draw(screen tcell.Screen) {
+	if !i.GetVisible() {
+		return
+	}
+
 	i.Box.Draw(screen)
 
 	i.Lock()
