@@ -189,6 +189,10 @@ func (m *Modal) HasFocus() bool {
 
 // Draw draws this primitive onto the screen.
 func (m *Modal) Draw(screen tcell.Screen) {
+	if !m.GetVisible() {
+		return
+	}
+
 	formItemCount := m.form.GetFormItemCount()
 
 	m.Lock()
