@@ -333,6 +333,10 @@ func (p *Panels) Focus(delegate func(p Primitive)) {
 
 // Draw draws this primitive onto the screen.
 func (p *Panels) Draw(screen tcell.Screen) {
+	if !p.GetVisible() {
+		return
+	}
+
 	p.Box.Draw(screen)
 
 	p.Lock()
